--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@chrisburnell/eleventy-cache-webmentions",
   "version": "0.1.10",
-  "description": "Cache webmentions from webmention.io using eleventy-cache-assets.",
+  "description": "Cache webmentions from webmention.io using eleventy-fetch.",
   "main": "eleventy-cache-webmentions.js",
   "author": "Chris Burnell <me@chrisburnell.com>",
   "license": "MIT",
@@ -16,7 +16,7 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@11ty/eleventy-cache-assets": "^2.3.0",
+    "@11ty/eleventy-fetch": "^3.0.0",
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
     "node-fetch": "2.6.5",
