--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chrisburnell/eleventy-cache-webmentions",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Fetch and cache webmentions using eleventy-fetch.",
   "main": "eleventy-cache-webmentions.js",
   "author": "Chris Burnell <me@chrisburnell.com>",
@@ -12,6 +12,7 @@
   "bugs": {
     "url": "https://github.com/chrisburnell/eleventy-cache-webmentions/issues"
   },
+  "homepage": "https://chrisburnell.com/eleventy-cache-webmentions/",
   "engines": {
     "node": ">=10"
   },
