--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@chrisburnell/eleventy-cache-webmentions",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Fetch and cache webmentions using eleventy-fetch.",
-  "main": "eleventy-cache-webmentions.js",
   "author": "Chris Burnell <me@chrisburnell.com>",
   "license": "MIT",
   "repository": {
@@ -12,9 +11,19 @@
   "bugs": {
     "url": "https://github.com/chrisburnell/eleventy-cache-webmentions/issues"
   },
-  "homepage": "https://chrisburnell.com/eleventy-cache-webmentions/",
+  "keywords": [
+    "eleventy",
+    "eleventy-plugin",
+    "indieweb",
+    "javascript",
+    "js",
+    "webmention"
+  ],
   "engines": {
     "node": ">=10"
+  },
+  "devDependencies": {
+    "eslint": "^8.7.0"
   },
   "dependencies": {
     "@11ty/eleventy-fetch": "^3.0.0",
@@ -22,10 +31,7 @@
     "node-fetch": "^2.6.5",
     "sanitize-html": "^2.7.1"
   },
-  "keywords": [
-    "eleventy",
-    "eleventy-plugin",
-    "indieweb",
-    "webmention"
-  ]
+  "scripts": {
+    "test": "eslint eleventy-cache-webmentions.js"
+  }
 }
