--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chrisburnell/eleventy-cache-webmentions",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Fetch and cache webmentions using eleventy-fetch.",
   "author": "Chris Burnell <me@chrisburnell.com>",
   "license": "MIT",
@@ -19,9 +19,6 @@
     "js",
     "webmention"
   ],
-  "engines": {
-    "node": ">=10"
-  },
   "devDependencies": {
     "eslint": "^8.7.0"
   },
@@ -31,7 +28,8 @@
     "node-fetch": "^2.6.5",
     "sanitize-html": "^2.7.1"
   },
+  "main": "eleventy-cache-webmentions.js",
   "scripts": {
-    "test": "eslint eleventy-cache-webmentions.js"
+    "lint": "eslint eleventy-cache-webmentions.js"
   }
 }
