make webmentions/webmentionsAll Global Data return flat array, webmentionByUrl return filtered

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,13 @@
-# .prettierrc
-semi: false
-printWidth: 9999
-tabWidth: 4
-overrides:
-  - files: "*.md"
-    options:
-      tabWidth: 2
+{
+	"semi": false,
+	"printWidth": 9999,
+	"tabWidth": 4,
+	"overrides": [
+		{
+			"files": "*.json",
+			"options": {
+				"tabWidth": 2
+			}
+		}
+	]
+}
