--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,11 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.md]
+[*.{json,svg,toml,yaml,yml}]
 indent_style = space
 indent_size = 2
+
+[*.md]
+indent_style = space
+indent_size = 4
 trim_trailing_whitespace = false
