--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chrisburnell/eleventy-cache-webmentions",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Fetch and cache webmentions using eleventy-fetch.",
   "author": "Chris Burnell <me@chrisburnell.com>",
   "license": "MIT",
@@ -25,7 +25,7 @@
   "dependencies": {
     "@11ty/eleventy-fetch": "^4.0.0",
     "lodash": "^4.17.21",
-    "node-fetch": "^3.3.1",
+    "node-fetch": "2.6.5",
     "sanitize-html": "^2.10.0"
   },
   "main": "eleventy-cache-webmentions.js",
