--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@11ty/eleventy-fetch": "^4.0.0",
     "lodash": "^4.17.21",
-    "node-fetch": "2.6.5",
+    "node-fetch": "^2.6.7",
     "sanitize-html": "^2.10.0"
   },
   "main": "eleventy-cache-webmentions.js",
