--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chrisburnell/eleventy-cache-webmentions",
-  "version": "2.1.0-beta.2",
+  "version": "2.1.0",
   "description": "Cache webmentions using eleventy-fetch and make them available to use in collections, layouts, pages, etc. in Eleventy.",
   "license": "MIT",
   "repository": {
@@ -42,6 +42,6 @@
     "sanitize-html": "^2.13.0"
   },
   "devDependencies": {
-    "eslint": "^9.2.0"
+    "eslint": "^9.8.0"
   }
 }
