--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chrisburnell/eleventy-cache-webmentions",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "Cache webmentions using eleventy-fetch and make them available to use in collections, layouts, pages, etc. in Eleventy.",
   "license": "MIT",
   "repository": {
@@ -11,17 +11,31 @@
   "bugs": {
     "url": "https://github.com/chrisburnell/eleventy-cache-webmentions/issues"
   },
-  "author": "Chris Burnell <me@chrisburnell.com>",
+  "author": {
+    "name": "Chris Burnell",
+    "email": "me@chrisburnell.com",
+    "url": "https://chrisburnell.com/"
+  },
   "contributors": [
     {
       "name": "Chris Burnell",
       "email": "me@chrisburnell.com",
-      "url": "https://chrisburnell.com",
-      "mastodon": "@chrisburnell@repc.co"
+      "url": "https://chrisburnell.com"
+    }
+  ],
+  "funding": [
+    {
+      "type": "buymeacoffee",
+      "url": "https://buymeacoffee.com/chrisburnell"
+    },
+    {
+      "type": "github",
+      "url": "https://github.com/sponsors/chrisburnell"
     }
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "main": "eleventy-cache-webmentions.js",
   "scripts": {
