feat: use chalk to style console output

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chrisburnell/eleventy-cache-webmentions",
-  "version": "2.1.6",
+  "version": "2.1.7",
   "description": "Cache webmentions using eleventy-fetch and make them available to use in collections, layouts, pages, etc. in Eleventy.",
   "license": "MIT",
   "repository": {
@@ -52,7 +52,8 @@
   ],
   "dependencies": {
     "@11ty/eleventy-fetch": "^4.0.1",
-    "lodash": "^4.17.21",
+    "chalk": "^4.1.2",
+    "lodash.uniqby": "^4.7.0",
     "node-fetch": "2.6.7",
     "sanitize-html": "^2.13.0"
   },
