--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chrisburnell/eleventy-cache-webmentions",
-  "version": "2.1.9-beta.1",
+  "version": "2.1.9-beta.2",
   "description": "Cache webmentions using eleventy-fetch and make them available to use in collections, layouts, pages, etc. in Eleventy.",
   "license": "MIT",
   "repository": {
@@ -51,13 +51,13 @@
     "webmention"
   ],
   "dependencies": {
-    "@11ty/eleventy-fetch": "^4.0.1",
-    "chalk": "^4.1.2",
+    "@11ty/eleventy-fetch": "^5.0.1",
+    "chalk": "4.1.2",
     "node-fetch": "2.6.7",
-    "sanitize-html": "^2.13.0"
+    "sanitize-html": "^2.14.0"
   },
   "devDependencies": {
-    "eslint": "^9.8.0",
-    "nock": "^13.5.4"
+    "eslint": "^9.17.0",
+    "nock": "^13.5.6"
   }
 }
